--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Analysis annotations\n",
-    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels_nodrops.csv\"\n",
+    "dgc_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels.csv\"\n",
     "with open(dgc_path) as f:\n",
     "  dgc = pd.read_csv(f)\n",
     "seagull_path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/crowdsourced/20230307_zooniverseanalysislabels_seagull.csv\"\n",
@@ -107,178 +107,6 @@
     "len(missing)\n",
     "#print(dgc['cluster_id']).value_counts()\n",
     "#print(seagull['cluster_id']).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>index</th>\n",
-       "      <th>annotation_id</th>\n",
-       "      <th>bbox_orig</th>\n",
-       "      <th>cat_id_orig</th>\n",
-       "      <th>cat_orig</th>\n",
-       "      <th>image_id</th>\n",
-       "      <th>filename</th>\n",
-       "      <th>labeler_id</th>\n",
-       "      <th>cluster_id</th>\n",
-       "      <th>cat_id_refined</th>\n",
-       "      <th>bbox_refined</th>\n",
-       "      <th>cat_refined</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>956322</td>\n",
-       "      <td>956323</td>\n",
-       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Duck</td>\n",
-       "      <td>28077</td>\n",
-       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
-       "      <td>4721</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
-       "      <td>Goose</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>956323</td>\n",
-       "      <td>956324</td>\n",
-       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Duck</td>\n",
-       "      <td>28077</td>\n",
-       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
-       "      <td>4721</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
-       "      <td>Goose</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>956324</td>\n",
-       "      <td>956325</td>\n",
-       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Duck</td>\n",
-       "      <td>28077</td>\n",
-       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
-       "      <td>4721</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
-       "      <td>Goose</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>956325</td>\n",
-       "      <td>956326</td>\n",
-       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Duck</td>\n",
-       "      <td>28077</td>\n",
-       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
-       "      <td>4721</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
-       "      <td>Goose</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>956326</td>\n",
-       "      <td>956327</td>\n",
-       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Duck</td>\n",
-       "      <td>28077</td>\n",
-       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
-       "      <td>4721</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
-       "      <td>Goose</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0   index  annotation_id  \\\n",
-       "0           0  956322         956323   \n",
-       "1           1  956323         956324   \n",
-       "2           2  956324         956325   \n",
-       "3           3  956325         956326   \n",
-       "4           4  956326         956327   \n",
-       "\n",
-       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
-       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
-       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
-       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
-       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
-       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
-       "\n",
-       "   image_id                         filename  labeler_id  cluster_id  \\\n",
-       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
-       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
-       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
-       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
-       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
-       "\n",
-       "   cat_id_refined                                       bbox_refined  \\\n",
-       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
-       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
-       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
-       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
-       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
-       "\n",
-       "  cat_refined  \n",
-       "0       Goose  \n",
-       "1       Goose  \n",
-       "2       Goose  \n",
-       "3       Goose  \n",
-       "4       Goose  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dgc.head()"
    ]
   },
   {
@@ -642,7 +470,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#INDIVIDUAL LABELER METRICS\n",
+    "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
+    "#Positional error: create confusion matrix, report commission error, omission error, RMSE, MAE -- bounding boxes, comparing each labeler to the consensus\n",
+    "\n",
+    "dgc['agree'] = 'No'\n",
+    "dgc.loc[dgc['cat_id_orig'] == dgc[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
+    "seagull['agree'] = 'No'\n",
+    "seagull.loc[seagull['cat_id_orig'] == seagull[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
+    "\n",
+    "#avg_agree = dgc.groupby(\"labeler_id\")[\"agree\"].value_counts().reset_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -671,13 +517,14 @@
        "      <th>annotation_id</th>\n",
        "      <th>bbox_orig</th>\n",
        "      <th>cat_id_orig</th>\n",
-       "      <th>category</th>\n",
+       "      <th>cat_orig</th>\n",
        "      <th>image_id</th>\n",
        "      <th>filename</th>\n",
        "      <th>labeler_id</th>\n",
        "      <th>cluster_id</th>\n",
        "      <th>cat_id_refined</th>\n",
        "      <th>bbox_refined</th>\n",
+       "      <th>cat_refined</th>\n",
        "      <th>agree</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -694,8 +541,9 @@
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>4721</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -710,8 +558,9 @@
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>4721</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -726,8 +575,9 @@
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>4721</td>\n",
        "      <td>8</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>Goose</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -742,8 +592,9 @@
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>4721</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -758,8 +609,9 @@
        "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
        "      <td>4721</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -774,7 +626,7 @@
        "3           3  956325         956326   \n",
        "4           4  956326         956327   \n",
        "\n",
-       "                                           bbox_orig  cat_id_orig category  \\\n",
+       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
        "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
        "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
        "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
@@ -788,15 +640,22 @@
        "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
        "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
        "\n",
-       "  cat_id_refined                                       bbox_refined agree  \n",
-       "0              2  [634.05224609375, 260.4735412597656, 49.0, 80....    No  \n",
-       "1              2            [555.4261474609375, 216.25, 53.0, 69.0]    No  \n",
-       "2              2  [369.28125, 237.5530014038086, 61.433685302734...    No  \n",
-       "3              2  [266.75, 120.83124542236328, 60.33087158203125...    No  \n",
-       "4              2          [176.8125, 22.46035385131836, 52.0, 84.0]    No  "
+       "   cat_id_refined                                       bbox_refined  \\\n",
+       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
+       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
+       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
+       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
+       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
+       "\n",
+       "  cat_refined agree  \n",
+       "0       Goose    No  \n",
+       "1       Goose    No  \n",
+       "2       Goose    No  \n",
+       "3       Goose    No  \n",
+       "4       Goose    No  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,31 +666,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#INDIVIDUAL LABELER METRICS\n",
-    "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
-    "#Positional error: create confusion matrix, report commission error, omission error, RMSE, MAE -- bounding boxes, comparing each labeler to the consensus\n",
-    "\n",
-    "dgc['agree'] = 'No'\n",
-    "dgc.loc[dgc['cat_id_orig'] == dgc[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
-    "avg_agree = dgc.groupby(\"labeler_id\")[\"agree\"].value_counts().reset_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "Yes    913693\n",
+       "No     278776\n",
+       "Name: agree, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dgc[\"agree\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cat_refined  agree\n",
+       "Crane        Yes      213845\n",
+       "             No        10801\n",
+       "Duck         Yes      648905\n",
+       "             No        43760\n",
+       "Goose        Yes       50620\n",
+       "             No        19331\n",
+       "Other Bird   Yes         323\n",
+       "             No          277\n",
+       "Name: agree, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dgc.groupby(\"cat_refined\")[\"agree\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cat_refined  agree\n",
+       "Crane        Yes         345\n",
+       "             No          335\n",
+       "Duck         Yes       13975\n",
+       "             No         6379\n",
+       "Goose        Yes       42794\n",
+       "             No        14167\n",
+       "Seagull      Yes      116730\n",
+       "             No        10418\n",
+       "Name: agree, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seagull.groupby(\"cat_refined\")[\"agree\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "913693"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
