display test image, confusion matrix

--- a/expert_crowd_agreement.ipynb
+++ b/expert_crowd_agreement.ipynb
@@ -2,83 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "import numpy as np"
+    "from collections import defaultdict\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from shapely.geometry import box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import refined labels\n",
+    "#Load the labels from the two files\n",
     "\n",
-    "#expert consensus labels\n",
-    "with open('labels1.csv', 'r') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    labels1 = [row for row in reader]\n",
-    "#crowdsourced consensus labels\n",
-    "with open('labels2.csv', 'r') as f:\n",
-    "    reader = csv.reader(f)\n",
-    "    labels2 = [row for row in reader]"
+    "labels_file1 = '/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/clean_crowd_benchmark.csv'\n",
+    "labels_file2 = '/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/expertconsensus_superclass.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Confusion matrix -- expert and crowd\n",
+    "# Define the IOU threshold and read in the labels\n",
+    "iou_thresh = 0.5\n",
     "\n",
-    "#Function to calculate IOU of bounding boxes\n",
-    "def calculate_iou(box1, box2):\n",
-    "    x1, y1, w1, h1 = box1\n",
-    "    x2, y2, w2, h2 = box2\n",
-    "    x_overlap = max(0, min(x1+w1, x2+w2) - max(x1, x2))\n",
-    "    y_overlap = max(0, min(y1+h1, y2+h2) - max(y1, y2))\n",
-    "    intersection = x_overlap * y_overlap\n",
-    "    union = (w1 * h1) + (w2 * h2) - intersection\n",
-    "    return intersection / union\n",
+    "# Define dictionaries to map class IDs to class names\n",
+    "class_map1 = {1: 'Crane', 2: 'Goose', 3: 'Duck'}\n",
+    "class_map2 = {1: 'Crane', 2: 'Goose', 3: 'Duck'}\n",
     "\n",
-    "#Create a dictionary to store the bounding boxes and class IDs for each image\n",
-    "boxes1 = {}\n",
-    "classes1 = {}\n",
-    "boxes2 = {}\n",
-    "classes2 = {}\n",
-    "for row in labels1:\n",
-    "    if row[1] not in boxes1:\n",
-    "        boxes1[row[1]] = []\n",
-    "        classes1[row[1]] = []\n",
-    "    boxes1[row[1]].append([float(x) for x in row[2:6]])\n",
-    "    classes1[row[1]].append(row[6])\n",
+    "# Read in the labels from file 1\n",
+    "labels1 = defaultdict(list)\n",
+    "with open(labels_file1) as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    next(reader)  # skip header\n",
+    "    for row in reader:\n",
+    "        label_id, filename, bbox, class_id = row\n",
+    "        bbox = [float(x) for x in bbox[1:-1].split(',')]\n",
+    "        labels1[filename].append((label_id, bbox, int(class_id)))\n",
     "\n",
-    "for row in labels2:\n",
-    "    if row[1] not in boxes2:\n",
-    "        boxes2[row[1]] = []\n",
-    "        classes2[row[1]] = []\n",
-    "    boxes2[row[1]].append([float(x) for x in row[2:6]])\n",
-    "    classes2[row[1]].append(row[6])\n",
-    "\n",
-    "#Compare the two sets of labels to identify the matching bounding boxes\n",
-    "conf_matrix = np.zeros((len(set(sum(classes1.values(), []))), len(set(sum(classes2.values(), [])))))\n",
-    "class_map1 = {c: i for i, c in enumerate(sorted(set(sum(classes1.values(), []))))}\n",
-    "class_map2 = {c: i for i, c in enumerate(sorted(set(sum(classes2.values(), [])))))}\n",
-    "for i, (img_name1, img_boxes1) in enumerate(boxes1.items()):\n",
-    "    for j, (img_name2, img_boxes2) in enumerate(boxes2.items()):\n",
-    "        for box1, c1 in zip(img_boxes1, classes1[img_name1]):\n",
-    "            for box2, c2 in zip(img_boxes2, classes2[img_name2]):\n",
-    "                if c1 == c2:\n",
-    "                    iou = calculate_iou(box1, box2)\n",
-    "                    if iou >= 0.5:\n",
-    "                        conf_matrix[class_map1[c1], class_map2[c2]] += 1\n",
-    "\n",
-    "#Create a confusion matrix to visualize the results\n",
+    "# Read in the labels from file 2\n",
+    "labels2 = defaultdict(list)\n",
+    "with open(labels_file2) as csvfile:\n",
+    "    reader = csv.reader(csvfile)\n",
+    "    next(reader)  # skip header\n",
+    "    for row in reader:\n",
+    "        label_id, filename, bbox, class_id = row\n",
+    "        bbox = [float(x) for x in bbox[1:-1].split(',')]\n",
+    "        labels2[filename].append((label_id, bbox, int(class_id)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the confusion matrix\n",
+    "conf_matrix = np.zeros((len(class_map1), len(class_map2)), dtype=int)\n",
+    "for filename in set(labels1.keys()) & set(labels2.keys()):\n",
+    "    if filename in labels1 and filename in labels2:\n",
+    "        for label1 in labels1[filename]:\n",
+    "            for label2 in labels2[filename]:\n",
+    "                bbox1 = box(*label1[1])\n",
+    "                bbox2 = box(*label2[1])\n",
+    "                iou = bbox1.intersection(bbox2).area / bbox1.union(bbox2).area\n",
+    "                if iou >= iou_thresh and label1[2] == label2[2]:\n",
+    "                    conf_matrix[label1[2] - 1, label2[2] - 1] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[0 0 0]\n",
+      " [0 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the confusion matrix\n",
+    "print('Confusion Matrix:')\n",
     "print(conf_matrix)"
    ]
   },
@@ -88,11 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Visualize results\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Step 5: Visualize the confusion matrix\n",
+    "# Visualize the confusion matrix\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "sns.heatmap(conf_matrix, annot=True, fmt='g', cmap='Blues', ax=ax)\n",
     "\n",
@@ -102,16 +117,30 @@
     "ax.set_title('Confusion Matrix')\n",
     "\n",
     "# Add class names as tick labels\n",
-    "ax.set_xticklabels(list(class_map2.keys()))\n",
-    "ax.set_yticklabels(list(class_map1.keys()))\n",
+    "ax.set_xticklabels(list(class_map2.values()))\n",
+    "ax.set_yticklabels(list(class_map1.values()))\n",
     "\n",
     "plt.show()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dronesforducks",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
