calculate IOU on original vs refined boxes

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -248,6 +248,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CHAT GPT's code for calculating IOU for each individual box in the dataset to make our per-labeler score\n",
+    "#Not tested yet but seems likely\n",
+    "\n",
+    "import pandas as pd\n",
+    "from shapely.geometry import box\n",
+    "\n",
+    "# Define a function to calculate the IOU\n",
+    "def calculate_iou(row):\n",
+    "    bbox_orig = box(row['bbox_orig'][0], row['bbox_orig'][1], row['bbox_orig'][0] + row['bbox_orig'][2], row['bbox_orig'][1] + row['bbox_orig'][3])\n",
+    "    bbox_ref = box(row['bbox_ref'][0], row['bbox_ref'][1], row['bbox_ref'][0] + row['bbox_ref'][2], row['bbox_ref'][1] + row['bbox_ref'][3])\n",
+    "    iou = bbox_orig.intersection(bbox_ref).area / bbox_orig.union(bbox_ref).area\n",
+    "    return iou\n",
+    "\n",
+    "# Apply the function to each row of the DataFrame and save the results in a new column\n",
+    "df['IOU'] = df.apply(calculate_iou, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
