Iou overlap calculations within groups

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +108,34 @@
     "len(missing)\n",
     "#print(dgc['cluster_id']).value_counts()\n",
     "#print(seagull['cluster_id']).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "634.05224609375"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def eval_bbox_refined(row):\n",
+    "    if pd.notnull(row['bbox_refined']):\n",
+    "        return ast.literal_eval(row['bbox_refined'])\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Apply the function to the 'bbox_refined' column and save the results\n",
+    "dgc['bbox_refined'] = dgc.apply(eval_bbox_refined, axis=1)\n",
+    "dgc[\"bbox_refined\"][0][0]\n"
    ]
   },
   {
@@ -248,9 +277,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cat_id_orig</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler_id</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_id_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>cat_refined</th>\n",
+       "      <th>IOU</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>956322</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0.529002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0.792570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0.495945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0.769960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>956327</td>\n",
+       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>Goose</td>\n",
+       "      <td>0.841553</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   index  annotation_id  \\\n",
+       "0           0  956322         956323   \n",
+       "1           1  956323         956324   \n",
+       "2           2  956324         956325   \n",
+       "3           3  956325         956326   \n",
+       "4           4  956326         956327   \n",
+       "\n",
+       "                                           bbox_orig  cat_id_orig cat_orig  \\\n",
+       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
+       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
+       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
+       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
+       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
+       "\n",
+       "   image_id                         filename  labeler_id  cluster_id  \\\n",
+       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
+       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
+       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
+       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
+       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
+       "\n",
+       "   cat_id_refined                                       bbox_refined  \\\n",
+       "0             2.0  [634.05224609375, 260.4735412597656, 49.0, 80....   \n",
+       "1             2.0            [555.4261474609375, 216.25, 53.0, 69.0]   \n",
+       "2             2.0  [369.28125, 237.5530014038086, 61.433685302734...   \n",
+       "3             2.0  [266.75, 120.83124542236328, 60.33087158203125...   \n",
+       "4             2.0          [176.8125, 22.46035385131836, 52.0, 84.0]   \n",
+       "\n",
+       "  cat_refined       IOU  \n",
+       "0       Goose  0.529002  \n",
+       "1       Goose  0.792570  \n",
+       "2       Goose  0.495945  \n",
+       "3       Goose  0.769960  \n",
+       "4       Goose  0.841553  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#CHAT GPT's code for calculating IOU for each individual box in the dataset to make our per-labeler score\n",
     "#Not tested yet but seems likely\n",
@@ -258,15 +456,32 @@
     "import pandas as pd\n",
     "from shapely.geometry import box\n",
     "\n",
-    "# Define a function to calculate the IOU\n",
+    "def eval_bbox(row, col_name):\n",
+    "    bbox_str = row[col_name]\n",
+    "    if pd.notnull(bbox_str):\n",
+    "        bbox = np.array(ast.literal_eval(bbox_str))\n",
+    "        bbox = bbox.astype(float)\n",
+    "    else:\n",
+    "        bbox = np.array([np.nan, np.nan, np.nan, np.nan])\n",
+    "    return bbox\n",
+    "\n",
+    "\n",
+    "# Define a function to calculate the IOU only if both bounding boxes are non-null\n",
     "def calculate_iou(row):\n",
-    "    bbox_orig = box(row['bbox_orig'][0], row['bbox_orig'][1], row['bbox_orig'][0] + row['bbox_orig'][2], row['bbox_orig'][1] + row['bbox_orig'][3])\n",
-    "    bbox_ref = box(row['bbox_ref'][0], row['bbox_ref'][1], row['bbox_ref'][0] + row['bbox_ref'][2], row['bbox_ref'][1] + row['bbox_ref'][3])\n",
-    "    iou = bbox_orig.intersection(bbox_ref).area / bbox_orig.union(bbox_ref).area\n",
+    "    bbox_orig = eval_bbox(row, 'bbox_orig')\n",
+    "    bbox_ref = eval_bbox(row, 'bbox_refined')\n",
+    "    if np.isnan(bbox_orig[0]) or np.isnan(bbox_orig[1]) or np.isnan(bbox_orig[2]) or np.isnan(bbox_orig[3]) or \\\n",
+    "        np.isnan(bbox_ref[0]) or np.isnan(bbox_ref[1]) or np.isnan(bbox_ref[2]) or np.isnan(bbox_ref[3]):\n",
+    "        iou = None\n",
+    "    else:\n",
+    "        bbox_orig = box(bbox_orig[0], bbox_orig[1], bbox_orig[0] + bbox_orig[2], bbox_orig[1] + bbox_orig[3])\n",
+    "        bbox_ref = box(bbox_ref[0], bbox_ref[1], bbox_ref[0] + bbox_ref[2], bbox_ref[1] + bbox_ref[3])\n",
+    "        iou = bbox_orig.intersection(bbox_ref).area / bbox_orig.union(bbox_ref).area\n",
     "    return iou\n",
     "\n",
     "# Apply the function to each row of the DataFrame and save the results in a new column\n",
-    "df['IOU'] = df.apply(calculate_iou, axis=1)\n"
+    "dgc['IOU'] = dgc.apply(calculate_iou, axis=1)\n",
+    "dgc.head()\n"
    ]
   },
   {
