--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -61,6 +61,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_bbox(row, col_name):\n",
+    "    bbox_str = row[col_name]\n",
+    "    if pd.notnull(bbox_str):\n",
+    "        bbox = np.array(ast.literal_eval(bbox_str))\n",
+    "        bbox = bbox.astype(float)\n",
+    "    else:\n",
+    "        bbox = np.array([np.nan, np.nan, np.nan, np.nan])\n",
+    "    return bbox\n",
+    "\n",
+    "\n",
+    "# Define a function to calculate the IOU only if both bounding boxes are non-null\n",
+    "def calculate_iou(row):\n",
+    "    bbox_orig = eval_bbox(row, 'bbox_orig')\n",
+    "    bbox_ref = eval_bbox(row, 'bbox_refined')\n",
+    "    if np.isnan(bbox_orig[0]) or np.isnan(bbox_orig[1]) or np.isnan(bbox_orig[2]) or np.isnan(bbox_orig[3]) or \\\n",
+    "        np.isnan(bbox_ref[0]) or np.isnan(bbox_ref[1]) or np.isnan(bbox_ref[2]) or np.isnan(bbox_ref[3]):\n",
+    "        iou = None\n",
+    "    else:\n",
+    "        bbox_orig = box(bbox_orig[0], bbox_orig[1], bbox_orig[0] + bbox_orig[2], bbox_orig[1] + bbox_orig[3])\n",
+    "        bbox_ref = box(bbox_ref[0], bbox_ref[1], bbox_ref[0] + bbox_ref[2], bbox_ref[1] + bbox_ref[3])\n",
+    "        iou = bbox_orig.intersection(bbox_ref).area / bbox_orig.union(bbox_ref).area\n",
+    "    return iou\n",
+    "\n",
+    "# Apply the function to each row of the DataFrame and save the results in a new column\n",
+    "dgc['IOU'] = dgc.apply(calculate_iou, axis=1)\n",
+    "dgc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
